Fix placeholder on iOS

--- a/src/styles/components/_components.inputs.scss
+++ b/src/styles/components/_components.inputs.scss
@@ -41,7 +41,7 @@
     border-radius: $input-border-radius;
     color: $input-color;
     font-size: $global-font-size;
-    line-height: 1;
+    line-height: normal;
     padding: $input-padding;
 
     &:not(:disabled) {
